; ModuleID = '/home/carl/AnghaBench/vlc/modules/hw/vdpau/extr_display.c_xcb_screen_num.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/hw/vdpau/extr_display.c_xcb_screen_num.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i64 }
%struct.TYPE_9__ = type { i64, %struct.TYPE_7__* }
%struct.TYPE_7__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.TYPE_8__*)* @xcb_screen_num to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xcb_screen_num(i32* %0, %struct.TYPE_8__* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_8__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_9__, align 8
  store i32* %0, i32** %4, align 8
  store %struct.TYPE_8__* %1, %struct.TYPE_8__** %5, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = call i32* @xcb_get_setup(i32* %9)
  store i32* %10, i32** %6, align 8
  store i32 0, i32* %7, align 4
  %11 = load i32*, i32** %6, align 8
  %12 = call { i64, %struct.TYPE_7__* } @xcb_setup_roots_iterator(i32* %11)
  %13 = bitcast %struct.TYPE_9__* %8 to { i64, %struct.TYPE_7__* }*
  %14 = getelementptr inbounds { i64, %struct.TYPE_7__* }, { i64, %struct.TYPE_7__* }* %13, i32 0, i32 0
  %15 = extractvalue { i64, %struct.TYPE_7__* } %12, 0
  store i64 %15, i64* %14, align 8
  %16 = getelementptr inbounds { i64, %struct.TYPE_7__* }, { i64, %struct.TYPE_7__* }* %13, i32 0, i32 1
  %17 = extractvalue { i64, %struct.TYPE_7__* } %12, 1
  store %struct.TYPE_7__* %17, %struct.TYPE_7__** %16, align 8
  br label %18

18:                                               ; preds = %36, %2
  %19 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %8, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = icmp sgt i64 %20, 0
  br i1 %21, label %22, label %38

22:                                               ; preds = %18
  %23 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %8, i32 0, i32 1
  %24 = load %struct.TYPE_7__*, %struct.TYPE_7__** %23, align 8
  %25 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %28 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = icmp eq i64 %26, %29
  br i1 %30, label %31, label %33

31:                                               ; preds = %22
  %32 = load i32, i32* %7, align 4
  store i32 %32, i32* %3, align 4
  br label %39

33:                                               ; preds = %22
  %34 = load i32, i32* %7, align 4
  %35 = add i32 %34, 1
  store i32 %35, i32* %7, align 4
  br label %36

36:                                               ; preds = %33
  %37 = call i32 @xcb_screen_next(%struct.TYPE_9__* %8)
  br label %18

38:                                               ; preds = %18
  store i32 -1, i32* %3, align 4
  br label %39

39:                                               ; preds = %38, %31
  %40 = load i32, i32* %3, align 4
  ret i32 %40
}

declare dso_local i32* @xcb_get_setup(i32*) #1

declare dso_local { i64, %struct.TYPE_7__* } @xcb_setup_roots_iterator(i32*) #1

declare dso_local i32 @xcb_screen_next(%struct.TYPE_9__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
